--- a/library.properties
+++ b/library.properties
@@ -1,1 +1,4 @@
-name=HiTecCtrls
+name=HiTechnic-Arduino
+version=1.0
+author=FTC Team 4634 FROGbots <info@frogbots.net>
+maintainer=FTC Team 4634 FROGbots <info@frogbots.net>
