--- a/library.properties
+++ b/library.properties
@@ -2,3 +2,4 @@ name=HiTechnic-Arduino
 version=1.0
 author=FTC Team 4634 FROGbots <info@frogbots.net>
 maintainer=FTC Team 4634 FROGbots <info@frogbots.net>
+sentence=Use HiTechnic controllers with your arduino!
