--- a/library.properties
+++ b/library.properties
@@ -2,4 +2,6 @@ name=HiTechnic-Arduino
 version=1.0
 author=FTC Team 4634 FROGbots <info@frogbots.net>
 maintainer=FTC Team 4634 FROGbots <info@frogbots.net>
-sentence=Use HiTechnic controllers with your arduino!
+sentence=Use the HiTechnic motor/servo controllers with your Arduino!
+category=Device Control
+url=https://github.com/OpenFTC/HiTechnic-Arduino
