--- a/library.properties
+++ b/library.properties
@@ -3,5 +3,6 @@ version=1.0
 author=FTC Team 4634 FROGbots <info@frogbots.net>
 maintainer=FTC Team 4634 FROGbots <info@frogbots.net>
 sentence=Use the HiTechnic motor/servo controllers with your Arduino!
+paragraph=This library provides I2C drivers for the HiTechnic motor/servo controllers wrapped up in a nice SDK-style API
 category=Device Control
 url=https://github.com/OpenFTC/HiTechnic-Arduino
